--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
 "patched": true,
 "curVersion": "2.583.1069.0",
 "oldVersion": "2.582.400.0",
-"appVersion": "1.0.0",
+"appVersion": "1.0.0.this-aint-a-virus",
 "cometVersion": "3.0.0.0.36 Alpha",
 "archiveId": "HttCHJxJ",
 "archivePath": "https://mega.nz/folder/agVwDKYb#p6I0ruLUE3-aUqu9cWu77A/file/"
